<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/math"
        android:text="@string/math"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"/>
    <Button
        android:id="@+id/btnSolo"
        android:text="@string/solo"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/math"
        android:layout_marginTop="50dp"/>
    <Button
        android:id="@+id/btnMulti"
        android:text="@string/multi"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnSolo"
        android:layout_marginTop="50dp" />
    <Button
        android:id="@+id/btnScore"
        android:text="@string/score"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnMulti"
        android:layout_marginTop="50dp"/>
    <Button
        android:id="@+id/btnBack"
        android:text="@string/back"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnScore"
        android:layout_marginTop="50dp"/>

</RelativeLayout>
